--- a/app/src/main/res/layout-land/activity_race.xml
+++ b/app/src/main/res/layout-land/activity_race.xml
@@ -6,237 +6,243 @@
     android:layout_height="match_parent"
     tools:context="com.example.marco.racingsnai.ActivityRace">
 
-    <TextView
-        android:id="@+id/txtInfo"
-        android:layout_width="290dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/info_game"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ProgressBar
-        android:id="@+id/progressBar1"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="300dp"
-        android:layout_height="30dp"
-        android:indeterminate="false"
-        android:max="1000"
-        android:progressTint="@android:color/black"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtInfo" />
-
-    <ProgressBar
-        android:id="@+id/progressBar2"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="300dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="4dp"
-        android:indeterminate="false"
-        android:max="1000"
-        android:progressTint="@android:color/black"
-        android:visibility="visible"
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="520dp"
+        android:layout_height="220dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar1" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <ProgressBar
-        android:id="@+id/progressBar3"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="300dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="4dp"
-        android:indeterminate="false"
-        android:max="1000"
-        android:progressTint="@android:color/black"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar2" />
+        <TextView
+            android:id="@+id/txtVwInfo"
+            android:layout_width="290dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="4dp"
+            android:text="@string/info_game"
+            android:textAlignment="center"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btnStart"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/start"
-        android:textAlignment="center"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar3" />
+        <ProgressBar
+            android:id="@+id/progressBar1"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="300dp"
+            android:layout_height="25dp"
+            android:indeterminate="false"
+            android:max="1000"
+            android:progressTint="@android:color/black"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtVwInfo" />
 
-    <TextView
-        android:id="@+id/txtNm1"
-        android:layout_width="80dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="40dp"
-        android:text="@string/too_much_security"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:visibility="visible"
-        app:layout_constraintEnd_toStartOf="@+id/progressBar1"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <ProgressBar
+            android:id="@+id/progressBar2"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="300dp"
+            android:layout_height="25dp"
+            android:indeterminate="false"
+            android:max="1000"
+            android:progressTint="@android:color/black"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/progressBar1" />
 
-    <Button
-        android:id="@+id/btnPlus1"
-        android:layout_width="70dp"
-        android:layout_height="50dp"
-        android:text="@string/plus"
-        android:textAlignment="center"
-        android:visibility="visible"
-        app:layout_constraintEnd_toStartOf="@+id/progressBar1"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtNm1" />
+        <ProgressBar
+            android:id="@+id/progressBar3"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="300dp"
+            android:layout_height="25dp"
+            android:indeterminate="false"
+            android:max="1000"
+            android:progressTint="@android:color/black"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/progressBar2" />
 
-    <TextView
-        android:id="@+id/val1"
-        android:layout_width="80dp"
-        android:layout_height="50dp"
-        android:singleLine="true"
-        android:text="0.0"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textSize="30sp"
-        android:visibility="visible"
-        app:layout_constraintEnd_toStartOf="@+id/progressBar3"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnPlus1" />
+        <Button
+            android:id="@+id/btnStart"
+            android:layout_width="300dp"
+            android:layout_height="40dp"
+            android:text="@string/start"
+            android:textAlignment="center"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/progressBar3" />
 
-    <Button
-        android:id="@+id/btnMinus1"
-        android:layout_width="70dp"
-        android:layout_height="50dp"
-        android:text="@string/minus"
-        android:textAlignment="center"
-        android:visibility="visible"
-        app:layout_constraintEnd_toStartOf="@+id/btnStart"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/val1" />
+        <TextView
+            android:id="@+id/txtNm1"
+            android:layout_width="70dp"
+            android:layout_height="35dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginTop="24dp"
+            android:text="@string/too_much_security"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:visibility="visible"
+            app:layout_constraintEnd_toStartOf="@+id/progressBar1"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/txtNm2"
-        android:layout_width="80dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/human_hate"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textStyle="bold"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnStart" />
+        <Button
+            android:id="@+id/btnPlus1"
+            android:layout_width="70dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="8dp"
+            android:text="@string/plus"
+            android:textAlignment="center"
+            android:visibility="visible"
+            app:layout_constraintEnd_toStartOf="@+id/progressBar1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtNm1" />
 
-    <Button
-        android:id="@+id/btnPlus2"
-        android:layout_width="70dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/plus"
-        android:textAlignment="center"
-        android:visibility="visible"
-        app:layout_constraintEnd_toStartOf="@+id/val2"
-        app:layout_constraintTop_toTopOf="@+id/txtNm2" />
+        <TextView
+            android:id="@+id/val1"
+            android:layout_width="70dp"
+            android:layout_height="45dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="8dp"
+            android:singleLine="true"
+            android:text="0.0"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textSize="30sp"
+            android:visibility="visible"
+            app:layout_constraintEnd_toStartOf="@+id/progressBar1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnPlus1" />
 
-    <TextView
-        android:id="@+id/val2"
-        android:layout_width="80dp"
-        android:layout_height="50dp"
-        android:singleLine="true"
-        android:text="0.0"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textSize="30sp"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtNm2" />
+        <Button
+            android:id="@+id/btnMinus1"
+            android:layout_width="70dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="24dp"
+            android:text="@string/minus"
+            android:textAlignment="center"
+            android:visibility="visible"
+            app:layout_constraintEnd_toStartOf="@+id/progressBar1"
+            app:layout_constraintTop_toBottomOf="@+id/val1" />
 
-    <Button
-        android:id="@+id/btnMinus2"
-        android:layout_width="70dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/minus"
-        android:textAlignment="center"
-        android:visibility="visible"
-        app:layout_constraintStart_toEndOf="@+id/val2"
-        app:layout_constraintTop_toTopOf="@+id/txtNm2" />
+        <TextView
+            android:id="@+id/txtNm2"
+            android:layout_width="80dp"
+            android:layout_height="20dp"
+            android:text="@string/industry_4_0"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/val2" />
 
-    <TextView
-        android:id="@+id/txtNm3"
-        android:layout_width="80dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="40dp"
-        android:text="@string/industry_4_0"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/txtInfo"
-        app:layout_constraintTop_toTopOf="parent" />
+        <Button
+            android:id="@+id/btnPlus2"
+            android:layout_width="70dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp"
+            android:text="@string/plus"
+            android:textAlignment="center"
+            android:visibility="visible"
+            app:layout_constraintStart_toEndOf="@+id/val2"
+            app:layout_constraintTop_toBottomOf="@+id/btnStart" />
 
-    <Button
-        android:id="@+id/btnPlus3"
-        android:layout_width="70dp"
-        android:layout_height="50dp"
-        android:text="@string/plus"
-        android:textAlignment="center"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/progressBar1"
-        app:layout_constraintTop_toBottomOf="@+id/txtNm3" />
+        <TextView
+            android:id="@+id/val2"
+            android:layout_width="70dp"
+            android:layout_height="47dp"
+            android:singleLine="true"
+            android:text="0.0"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textSize="30sp"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnStart" />
 
-    <TextView
-        android:id="@+id/val3"
-        android:layout_width="80dp"
-        android:layout_height="50dp"
-        android:singleLine="true"
-        android:text="0.0"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textSize="30sp"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/progressBar3"
-        app:layout_constraintTop_toBottomOf="@+id/btnPlus3" />
+        <Button
+            android:id="@+id/btnMinus2"
+            android:layout_width="70dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="4dp"
+            android:text="@string/minus"
+            android:textAlignment="center"
+            android:visibility="visible"
+            app:layout_constraintEnd_toStartOf="@+id/val2"
+            app:layout_constraintTop_toBottomOf="@+id/btnStart" />
 
-    <Button
-        android:id="@+id/btnMinus3"
-        android:layout_width="70dp"
-        android:layout_height="50dp"
-        android:text="@string/minus"
-        android:textAlignment="center"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/btnStart"
-        app:layout_constraintTop_toBottomOf="@+id/val3" />
+        <TextView
+            android:id="@+id/txtNm3"
+            android:layout_width="70dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
+            android:text="@string/human_hate"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textStyle="bold"
+            android:visibility="visible"
+            app:layout_constraintStart_toEndOf="@+id/progressBar1"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/btnPlus3"
+            android:layout_width="70dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="24dp"
+            android:text="@string/plus"
+            android:textAlignment="center"
+            android:visibility="visible"
+            app:layout_constraintStart_toEndOf="@+id/progressBar1"
+            app:layout_constraintTop_toBottomOf="@+id/txtNm3" />
+
+        <TextView
+            android:id="@+id/val3"
+            android:layout_width="70dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="24dp"
+            android:singleLine="true"
+            android:text="0.0"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textSize="30sp"
+            android:visibility="visible"
+            app:layout_constraintStart_toEndOf="@+id/progressBar1"
+            app:layout_constraintTop_toBottomOf="@+id/btnPlus3" />
+
+        <Button
+            android:id="@+id/btnMinus3"
+            android:layout_width="70dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="24dp"
+            android:text="@string/minus"
+            android:textAlignment="center"
+            android:visibility="visible"
+            app:layout_constraintStart_toEndOf="@+id/progressBar1"
+            app:layout_constraintTop_toBottomOf="@+id/val3" />
+
+    </android.support.constraint.ConstraintLayout>
 
     <Button
         android:id="@+id/btnBack"
-        android:layout_width="165dp"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
@@ -248,7 +254,7 @@
 
     <Button
         android:id="@+id/btnAgain"
-        android:layout_width="165dp"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
